terraform/backend/02-vpc-config.tf
resource "aws_vpc" "vpc" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "phonebook-vpc"
  }
}
