terraform/backend/03-config-gateway.tf
resource "aws_internet_gateway" "internet-gateway" {
  vpc_id = aws_vpc.vpc.id

}
